# TextArena

./: .gitignore  CAPPED_POLICY_IMPLEMENTATION.md  CLAIRVOYANT_LEAD_TIME_SETUP.md  CSV_COLUMN_NAME_FIX.md  HUMAN_FEEDBACK_IMPLEMENTATION.md  INSTANCE_4_1_SUMMARY.md  LEAD_TIME_INF_BEHAVIOR.md  LEAD_TIME_INF_FIX.md  MANIFEST.in  MODIFICATIONS_NEEDED.md  README.md  REAL_INSTANCES_INTEGRATION_SUMMARY.md  REAL_INSTANCES_REEXTRACTION.md  REAL_INSTANCES_USAGE.md  RECENT_N_ENHANCEMENT.md  SETUP_INSTRUCTIONS.md  UTF8_ENCODING_FIX.md  WEEKLY_TIMESCALE_MIGRATION.md  _test_render.py  agent_or_output_1007.txt  agent_or_output_1007_2.txt  agent_or_output_1007_3.txt  agent_or_output_1007_4.txt  agent_or_output_1007_temperature=0.txt  agent_output_1007.txt  check_table_permissions.sql  create_game_logging_tables.sql  create_game_logging_tables_simple.sql  create_game_runs_table.sql  create_user_table.sql  eval_test.py  fix_user_table_permissions.sql  frame_ascii.txt  frame_chargrid.txt  frame_chargrid_numbers_only.txt  frame_chargrid_trimmed.txt  main.py  migrate_game_steps_add_columns.sql  output_vending_1009.txt  pyproject.toml  (+10 more)
examples/: EXAMPLE_INTERACTION.md  HUMAN_FEEDBACK_USAGE.md  QUICK_REFERENCE.md  REAL_INSTANCE_USAGE_GUIDE.md  agent_or_csv_demo.py  agent_or_output.txt  agent_output.txt  benchmark_all_strategies.py  benchmark_all_strategies.py.backup  benchmark_results.json  clairvoyant_or_csv.py  demand.csv  demand_case1_iid_normal.csv  demand_case2_sudden_shift_cp15.csv  demand_case3_increasing.csv  demand_case4_1_variance_decrease_cp15.csv  demand_case4_normal_to_uniform_cp15.csv  demand_case5_L_const4.csv  demand_case6_L_normal_4_2.csv  demand_case7_L_shift_cp15.csv  demand_case8_L_inf_p01.csv  llm_csv_demo.py  llm_to_or_csv_demo.py  offline_play.py  or_csv_demo.py  or_output.txt  or_to_llm_csv_demo.py  perfect_score.py  re_extract_real_instances.py  (+19 more)
(+871 files in other folders)
