[build-system]
requires = ["setuptools>=61.0", "wheel", "importlib-resources"]
build-backend = "setuptools.build_meta"

[project]
name = "TextArena"
version = "0.7.3"
description = "VendingMachine Environment - A specialized TextArena environment for supply-demand simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Leon Guertler", email="Guertlerlo@cfar.a-star.edu.sg"},]
dependencies = [
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "supabase",
    "httpx",
    "pandas",
    "python-dotenv",
    "PyJWT",
    "scipy",
]

[project.urls]
"Homepage" = "https://www.textarena.ai/"

[project.optional-dependencies]
all = ["sympy", "latex2sympy", "openai", "google-generativeai", "transformers", "cerebras-cloud-sdk", "boto3", "anthropic"]

# Explicit setuptools configuration to avoid packaging the top-level 'data' folder
[tool.setuptools.packages.find]
include = ["textarena*"]
exclude = ["data*"]

